# Advanced-Computer-Systems

Project_1/: README  (+12 more)
Project_2/: CMakeLists.txt  README  README.md  bandwidth_bench.cpp  bw_random_1024_100R.csv  bw_random_256_100R.csv  bw_random_64_100R.csv  bw_seq_1024_100R.csv  bw_seq_256_100R.csv  bw_seq_64_100R.csv  bw_smoke.csv  intensity_2.csv  intensity_T1.csv  intensity_T2.csv  intensity_T4.csv  intensity_T8.csv  ker_smoke.csv  kernel_bench.cpp  latency_bench.cpp  latency_ws.csv  main.cpp  mix_100R.csv  mix_100W.csv  mix_50R50W.csv  mix_70R30W.csv  plot_all.py  run_sweeps.sh  saxpy_local.csv  saxpy_random.csv  saxpy_random.perf.csv  saxpy_tlb_span16.csv  saxpy_tlb_span16.perf.csv  saxpy_tlb_span16_huge.csv  saxpy_tlb_span16_huge.perf.csv  summary_wsl.csv  util.cpp  util.h
Project_2/results/: L1D_B=
Project_2/results/bw/: bw_random_1024_100R.csv  bw_random_256_100R.csv  bw_random_64_100R.csv  bw_seq_1024_100R.csv  bw_seq_256_100R.csv  bw_seq_64_100R.csv  intensity_1.csv  intensity_T1.csv  intensity_T2.csv  intensity_T4.csv  intensity_T8.csv  mix_100R.csv  mix_100W.csv  mix_50R50W.csv  mix_70R30W.csv
Project_2/results/csv/: cache_kernel_perf.csv  intensity_loaded_latency.csv  latency_vs_wss.csv  pattern_stride_all.csv  rw_mix_all.csv  zeroq_latencies.csv  zeroq_latencies_cycles.csv
Project_2/results/kernel/: saxpy_local.csv  saxpy_random.csv  saxpy_tlb_span16.csv  saxpy_tlb_span16_huge.csv
Project_2/scripts/: discover_and_map.py  harvest_existing_csvs.py  make_all_plots.py  make_ws_plot_labeled.py  run_all_wsl.sh  run_perf.sh  super_harvest.py
(+155 files in other folders)
